# Nfd_Gateway

./: CMakeLists.txt  bug.txt
daemon/: Ndp-client.cpp  Ndp-server.cpp  Ndp.hpp  coordinate.cpp  coordinate.h  main.cpp  nfd.cpp  nfd.hpp  nwd.cpp  nwd.hpp  wsn-data.cpp  wsn-data.hpp  zhushi.em
daemon/fw/: face-table.cpp  forwarder.cpp  forwarder.hpp  location-route-strategy.cpp  location-route-strategy.hpp  strategy-registry.hpp  strategy.hpp  wsn-route-strategy.cpp  wsn-route-strategy.hpp
daemon/mgmt/: serial_manager.cpp  serial_manager.hpp
daemon/table/: pit-in-record.cpp  pit-in-record.hpp  routetable-entry.cpp  routetable-entry.hpp  strategy-choice.cpp
tools/: nfd-status.cpp  nfdc.cpp  nwd-status.cpp
