cmake_minimum_required(VERSION 3.6)
project(NFD_master)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 ")

include_directories(/home/youngwb/NFD_OBJ/include/ndn-cxx)
include_directories(/home/youngwb/NFD_OBJ/lib64)
link_directories(/home/youngwb/NFD_OBJ/lib64)
link_libraries(/home/youngwb/NFD_OBJ/lib64/libndn-cxx.so.0.4.1)

find_package(Boost 1.54.0 COMPONENTS log thread system regex REQUIRED)

set(SOURCE_FILES
    build/config.hpp
    build/version.hpp
    core/algorithm.hpp
    core/city-hash.cpp
    core/city-hash.hpp
    core/config-file.cpp
    core/config-file.hpp
    core/counter.hpp
    core/extended-error-message.hpp
    core/global-io.cpp
    core/global-io.hpp
    core/logger-factory.cpp
    core/logger-factory.hpp
    core/logger.cpp
    core/logger.hpp
    core/network-interface.cpp
    core/network-interface.hpp
    core/network.cpp
    core/network.hpp
    core/privilege-helper.cpp
    core/privilege-helper.hpp
    core/random.cpp
    core/random.hpp
    core/scheduler.cpp
    core/scheduler.hpp
    core/segment-publisher.hpp
    daemon/face/channel.cpp
    daemon/face/channel.hpp
    daemon/face/datagram-transport.hpp
    daemon/face/ethernet-factory.cpp
    daemon/face/ethernet-factory.hpp
    daemon/face/ethernet-transport.cpp
    daemon/face/ethernet-transport.hpp
    daemon/face/face-counters.cpp
    daemon/face/face-counters.hpp
    daemon/face/face-log.hpp
    daemon/face/face.cpp
    daemon/face/face.hpp
    daemon/face/generic-link-service.cpp
    daemon/face/generic-link-service.hpp
    daemon/face/internal-face.cpp
    daemon/face/internal-face.hpp
    daemon/face/internal-transport.cpp
    daemon/face/internal-transport.hpp
    daemon/face/link-service.cpp
    daemon/face/link-service.hpp
    daemon/face/lp-fragmenter.cpp
    daemon/face/lp-fragmenter.hpp
    daemon/face/lp-reassembler.cpp
    daemon/face/lp-reassembler.hpp
    daemon/face/multicast-udp-transport.cpp
    daemon/face/multicast-udp-transport.hpp
    daemon/face/null-face.cpp
    daemon/face/null-face.hpp
    daemon/face/protocol-factory.hpp
    daemon/face/stream-transport.hpp
    daemon/face/tcp-channel.cpp
    daemon/face/tcp-channel.hpp
    daemon/face/tcp-factory.cpp
    daemon/face/tcp-factory.hpp
    daemon/face/tcp-transport.cpp
    daemon/face/tcp-transport.hpp
    daemon/face/transport.cpp
    daemon/face/transport.hpp
    daemon/face/udp-channel.cpp
    daemon/face/udp-channel.hpp
    daemon/face/udp-factory.cpp
    daemon/face/udp-factory.hpp
    daemon/face/udp-protocol.cpp
    daemon/face/udp-protocol.hpp
    daemon/face/unicast-udp-transport.cpp
    daemon/face/unicast-udp-transport.hpp
    daemon/face/unix-stream-channel.cpp
    daemon/face/unix-stream-channel.hpp
    daemon/face/unix-stream-factory.cpp
    daemon/face/unix-stream-factory.hpp
    daemon/face/unix-stream-transport.cpp
    daemon/face/unix-stream-transport.hpp
    daemon/face/websocket-channel.cpp
    daemon/face/websocket-channel.hpp
    daemon/face/websocket-factory.cpp
    daemon/face/websocket-factory.hpp
    daemon/face/websocket-transport.cpp
    daemon/face/websocket-transport.hpp
    daemon/face/websocketpp.hpp
    daemon/fw/access-strategy.cpp
    daemon/fw/access-strategy.hpp
    daemon/fw/best-route-strategy.cpp
    daemon/fw/best-route-strategy.hpp
    daemon/fw/best-route-strategy2.cpp
    daemon/fw/best-route-strategy2.hpp
    daemon/fw/broadcast-strategy.cpp
    daemon/fw/broadcast-strategy.hpp
    daemon/fw/client-control-strategy.cpp
    daemon/fw/client-control-strategy.hpp
    daemon/fw/face-table.cpp
    daemon/fw/face-table.hpp
    daemon/fw/forwarder-counters.hpp
    daemon/fw/forwarder.cpp
    daemon/fw/forwarder.hpp
    daemon/fw/multicast-strategy.cpp
    daemon/fw/multicast-strategy.hpp
    daemon/fw/ncc-strategy.cpp
    daemon/fw/ncc-strategy.hpp
    daemon/fw/pit-algorithm.cpp
    daemon/fw/pit-algorithm.hpp
    daemon/fw/retx-suppression-exponential.cpp
    daemon/fw/retx-suppression-exponential.hpp
    daemon/fw/retx-suppression-fixed.cpp
    daemon/fw/retx-suppression-fixed.hpp
    daemon/fw/retx-suppression.cpp
    daemon/fw/retx-suppression.hpp
    daemon/fw/rtt-estimator.cpp
    daemon/fw/rtt-estimator.hpp
    daemon/fw/strategy-info.hpp
    daemon/fw/strategy-registry.cpp
    daemon/fw/strategy-registry.hpp
    daemon/fw/strategy.cpp
    daemon/fw/strategy.hpp
    daemon/fw/wsn-route-strategy.cpp
    daemon/fw/wsn-route-strategy.hpp
    daemon/mgmt/command-validator.cpp
    daemon/mgmt/command-validator.hpp
    daemon/mgmt/face-manager.cpp
    daemon/mgmt/face-manager.hpp
    daemon/mgmt/fib-manager.cpp
    daemon/mgmt/fib-manager.hpp
    daemon/mgmt/forwarder-status-manager.cpp
    daemon/mgmt/forwarder-status-manager.hpp
    daemon/mgmt/general-config-section.cpp
    daemon/mgmt/general-config-section.hpp
    daemon/mgmt/manager-base.cpp
    daemon/mgmt/manager-base.hpp
    daemon/mgmt/serial_manager.cpp
    daemon/mgmt/serial_manager.hpp
    daemon/mgmt/strategy-choice-manager.cpp
    daemon/mgmt/strategy-choice-manager.hpp
    daemon/mgmt/tables-config-section.cpp
    daemon/mgmt/tables-config-section.hpp
    daemon/table/cs-entry-impl.cpp
    daemon/table/cs-entry-impl.hpp
    daemon/table/cs-entry.cpp
    daemon/table/cs-entry.hpp
    daemon/table/cs-internal.hpp
    daemon/table/cs-policy-lru.cpp
    daemon/table/cs-policy-lru.hpp
    daemon/table/cs-policy-priority-fifo.cpp
    daemon/table/cs-policy-priority-fifo.hpp
    daemon/table/cs-policy.cpp
    daemon/table/cs-policy.hpp
    daemon/table/cs.cpp
    daemon/table/cs.hpp
    daemon/table/dead-nonce-list.cpp
    daemon/table/dead-nonce-list.hpp
    daemon/table/fib-entry.cpp
    daemon/table/fib-entry.hpp
    daemon/table/fib-nexthop.cpp
    daemon/table/fib-nexthop.hpp
    daemon/table/fib.cpp
    daemon/table/fib.hpp
    daemon/table/measurements-accessor.cpp
    daemon/table/measurements-accessor.hpp
    daemon/table/measurements-entry.cpp
    daemon/table/measurements-entry.hpp
    daemon/table/measurements.cpp
    daemon/table/measurements.hpp
    daemon/table/name-tree-entry.cpp
    daemon/table/name-tree-entry.hpp
    daemon/table/name-tree.cpp
    daemon/table/name-tree.hpp
    daemon/table/network-region-table.cpp
    daemon/table/network-region-table.hpp
    daemon/table/pit-entry.cpp
    daemon/table/pit-entry.hpp
    daemon/table/pit-face-record.cpp
    daemon/table/pit-face-record.hpp
    daemon/table/pit-in-record.cpp
    daemon/table/pit-in-record.hpp
    daemon/table/pit-out-record.cpp
    daemon/table/pit-out-record.hpp
    daemon/table/pit.cpp
    daemon/table/pit.hpp
    daemon/table/strategy-choice-entry.cpp
    daemon/table/strategy-choice-entry.hpp
    daemon/table/strategy-choice.cpp
    daemon/table/strategy-choice.hpp
    daemon/table/strategy-info-host.cpp
    daemon/table/strategy-info-host.hpp
    daemon/main.cpp
    daemon/nfd.cpp
    daemon/nfd.hpp
    daemon/nwd.cpp
    daemon/nwd.hpp
    daemon/wsn-data.cpp
    daemon/wsn-data.hpp
    rib/auto-prefix-propagator.cpp
    rib/auto-prefix-propagator.hpp
    rib/fib-update.cpp
    rib/fib-update.hpp
    rib/fib-updater.cpp
    rib/fib-updater.hpp
    rib/nrd.cpp
    rib/nrd.hpp
    rib/propagated-entry.cpp
    rib/propagated-entry.hpp
    rib/rib-entry.cpp
    rib/rib-entry.hpp
    rib/rib-manager.cpp
    rib/rib-manager.hpp
    rib/rib-status-publisher.cpp
    rib/rib-status-publisher.hpp
    rib/rib-update-batch.cpp
    rib/rib-update-batch.hpp
    rib/rib-update.cpp
    rib/rib-update.hpp
    rib/rib.cpp
    rib/rib.hpp
    rib/route.cpp
    rib/route.hpp
    tests/core/algorithm.t.cpp
    tests/core/config-file.t.cpp
    tests/core/counter.t.cpp
    tests/core/global-io.t.cpp
    tests/core/logger.t.cpp
    tests/core/ndebug.t.cpp
    tests/core/network-interface.t.cpp
    tests/core/network.t.cpp
    tests/core/privilege-helper.t.cpp
    tests/core/random.t.cpp
    tests/core/scheduler.t.cpp
    tests/core/segment-publisher.t.cpp
    tests/core/version.t.cpp
    tests/daemon/face/datagram-transport.t.cpp
    tests/daemon/face/dummy-face.cpp
    tests/daemon/face/dummy-face.hpp
    tests/daemon/face/dummy-receive-link-service.hpp
    tests/daemon/face/dummy-transport.hpp
    tests/daemon/face/ethernet-factory.t.cpp
    tests/daemon/face/ethernet-transport.t.cpp
    tests/daemon/face/face.t.cpp
    tests/daemon/face/generic-link-service.t.cpp
    tests/daemon/face/get-available-interface-ip.hpp
    tests/daemon/face/internal-face.t.cpp
    tests/daemon/face/lp-fragmenter.t.cpp
    tests/daemon/face/lp-reassembler.t.cpp
    tests/daemon/face/multicast-udp-transport-fixture.hpp
    tests/daemon/face/multicast-udp-transport.t.cpp
    tests/daemon/face/network-interface-fixture.hpp
    tests/daemon/face/null-face.t.cpp
    tests/daemon/face/stream-transport.t.cpp
    tests/daemon/face/tcp-channel.t.cpp
    tests/daemon/face/tcp-factory.t.cpp
    tests/daemon/face/tcp-transport-fixture.hpp
    tests/daemon/face/tcp-transport.t.cpp
    tests/daemon/face/transport-test-common.hpp
    tests/daemon/face/transport.t.cpp
    tests/daemon/face/udp-channel.t.cpp
    tests/daemon/face/udp-factory.t.cpp
    tests/daemon/face/unicast-udp-transport-fixture.hpp
    tests/daemon/face/unicast-udp-transport.t.cpp
    tests/daemon/face/unix-stream-channel.t.cpp
    tests/daemon/face/unix-stream-factory.t.cpp
    tests/daemon/face/unix-stream-transport-fixture.hpp
    tests/daemon/face/unix-stream-transport.t.cpp
    tests/daemon/face/websocket-channel.t.cpp
    tests/daemon/face/websocket-factory.t.cpp
    tests/daemon/face/websocket-transport.t.cpp
    tests/daemon/fw/access-strategy.t.cpp
    tests/daemon/fw/best-route-strategy2.t.cpp
    tests/daemon/fw/broadcast-strategy.t.cpp
    tests/daemon/fw/client-control-strategy.t.cpp
    tests/daemon/fw/dummy-strategy.hpp
    tests/daemon/fw/face-table.t.cpp
    tests/daemon/fw/forwarder.t.cpp
    tests/daemon/fw/multicast-strategy.t.cpp
    tests/daemon/fw/ncc-strategy.t.cpp
    tests/daemon/fw/pit-algorithm.t.cpp
    tests/daemon/fw/retx-suppression.t.cpp
    tests/daemon/fw/rtt-estimator.t.cpp
    tests/daemon/fw/strategy-tester.hpp
    tests/daemon/fw/strategy.t.cpp
    tests/daemon/fw/topology-tester.cpp
    tests/daemon/fw/topology-tester.hpp
    tests/daemon/mgmt/command-validator.t.cpp
    tests/daemon/mgmt/face-manager-create-face.t.cpp
    tests/daemon/mgmt/face-manager-process-config.t.cpp
    tests/daemon/mgmt/face-manager.t.cpp
    tests/daemon/mgmt/fib-manager.t.cpp
    tests/daemon/mgmt/forwarder-status-manager.t.cpp
    tests/daemon/mgmt/general-config-section.t.cpp
    tests/daemon/mgmt/manager-base.t.cpp
    tests/daemon/mgmt/manager-common-fixture.cpp
    tests/daemon/mgmt/manager-common-fixture.hpp
    tests/daemon/mgmt/strategy-choice-manager.t.cpp
    tests/daemon/mgmt/tables-config-section.t.cpp
    tests/daemon/table/cs-policy-lru.t.cpp
    tests/daemon/table/cs-policy-priority-fifo.t.cpp
    tests/daemon/table/cs.t.cpp
    tests/daemon/table/dead-nonce-list.t.cpp
    tests/daemon/table/fib.t.cpp
    tests/daemon/table/measurements-accessor.t.cpp
    tests/daemon/table/measurements.t.cpp
    tests/daemon/table/name-tree.t.cpp
    tests/daemon/table/network-region-table.t.cpp
    tests/daemon/table/pit.t.cpp
    tests/daemon/table/strategy-choice.t.cpp
    tests/daemon/table/strategy-info-host.t.cpp
    tests/other/cs-benchmark.cpp
    tests/rib/auto-prefix-propagator.t.cpp
    tests/rib/fib-updates-common.hpp
    tests/rib/fib-updates-erase-face.t.cpp
    tests/rib/fib-updates-new-face.t.cpp
    tests/rib/fib-updates-new-namespace.t.cpp
    tests/rib/fib-updates-update-face.t.cpp
    tests/rib/propagated-entry.t.cpp
    tests/rib/rib-manager.t.cpp
    tests/rib/rib-status-publisher-common.hpp
    tests/rib/rib-status-publisher.t.cpp
    tests/rib/rib-test-common.hpp
    tests/rib/rib-update.cpp
    tests/rib/rib.t.cpp
    tests/boost-multi-log-formatter.hpp
    tests/boost-test.hpp
    tests/global-configuration.cpp
    tests/identity-management-fixture.cpp
    tests/identity-management-fixture.hpp
    tests/limited-io.cpp
    tests/limited-io.hpp
    tests/main.cpp
    tests/test-common.hpp
    tools/ndn-autoconfig/base-dns.cpp
    tools/ndn-autoconfig/base-dns.hpp
    tools/ndn-autoconfig/base.cpp
    tools/ndn-autoconfig/base.hpp
    tools/ndn-autoconfig/guess-from-identity-name.cpp
    tools/ndn-autoconfig/guess-from-identity-name.hpp
    tools/ndn-autoconfig/guess-from-search-domains.cpp
    tools/ndn-autoconfig/guess-from-search-domains.hpp
    tools/ndn-autoconfig/main.cpp
    tools/ndn-autoconfig/multicast-discovery.cpp
    tools/ndn-autoconfig/multicast-discovery.hpp
    tools/ndn-autoconfig-server.cpp
    tools/nfd-autoreg.cpp
    tools/nfd-status.cpp
    tools/nfdc.cpp
    tools/nfdc.hpp
    tools/nwd-status.cpp
    websocketpp/docs/simple_broadcast_server.cpp
    websocketpp/docs/simple_count_server_thread.cpp
    websocketpp/examples/associative_storage/associative_storage.cpp
    websocketpp/examples/broadcast_server/broadcast_server.cpp
    websocketpp/examples/debug_client/debug_client.cpp
    websocketpp/examples/debug_server/debug_server.cpp
    websocketpp/examples/dev/main.cpp
    websocketpp/examples/echo_server/echo_handler.hpp
    websocketpp/examples/echo_server/echo_server.cpp
    websocketpp/examples/echo_server_both/echo_server_both.cpp
    websocketpp/examples/echo_server_tls/echo_server_tls.cpp
    websocketpp/examples/enriched_storage/enriched_storage.cpp
    websocketpp/examples/handler_switch/handler_switch.cpp
    websocketpp/examples/iostream_server/iostream_server.cpp
    websocketpp/examples/print_server/print_server.cpp
    websocketpp/examples/simple_broadcast_server/simple_broadcast_server.cpp
    websocketpp/examples/sip_client/sip_client.cpp
    websocketpp/examples/subprotocol_server/subprotocol_server.cpp
    websocketpp/examples/telemetry_client/telemetry_client.cpp
    websocketpp/examples/telemetry_server/telemetry_server.cpp
    websocketpp/examples/testee_client/testee_client.cpp
    websocketpp/examples/testee_server/testee_server.cpp
    websocketpp/examples/utility_client/utility_client.cpp
    websocketpp/test/connection/connection.cpp
    websocketpp/test/connection/connection_tu2.cpp
    websocketpp/test/connection/connection_tu2.hpp
    websocketpp/test/endpoint/endpoint.cpp
    websocketpp/test/extension/extension.cpp
    websocketpp/test/extension/permessage_deflate.cpp
    websocketpp/test/http/parser.cpp
    websocketpp/test/http/parser_perf.cpp
    websocketpp/test/logger/basic.cpp
    websocketpp/test/message_buffer/alloc.cpp
    websocketpp/test/message_buffer/message.cpp
    websocketpp/test/message_buffer/pool.cpp
    websocketpp/test/processors/extension_permessage_compress.cpp
    websocketpp/test/processors/hybi00.cpp
    websocketpp/test/processors/hybi07.cpp
    websocketpp/test/processors/hybi08.cpp
    websocketpp/test/processors/hybi13.cpp
    websocketpp/test/processors/processor.cpp
    websocketpp/test/random/none.cpp
    websocketpp/test/random/random_device.cpp
    websocketpp/test/roles/client.cpp
    websocketpp/test/roles/server.cpp
    websocketpp/test/transport/asio/base.cpp
    websocketpp/test/transport/asio/timers.cpp
    websocketpp/test/transport/iostream/base.cpp
    websocketpp/test/transport/iostream/connection.cpp
    websocketpp/test/transport/iostream/endpoint.cpp
    websocketpp/test/transport/hybi_util.cpp
    websocketpp/test/transport/integration.cpp
    websocketpp/test/utility/close.cpp
    websocketpp/test/utility/error.cpp
    websocketpp/test/utility/frame.cpp
    websocketpp/test/utility/sha1.cpp
    websocketpp/test/utility/uri.cpp
    websocketpp/test/utility/utilities.cpp
    websocketpp/tutorials/utility_client/step1.cpp
    websocketpp/tutorials/utility_client/step2.cpp
    websocketpp/tutorials/utility_client/step3.cpp
    websocketpp/tutorials/utility_client/step4.cpp
    websocketpp/tutorials/utility_client/step5.cpp
    websocketpp/tutorials/utility_client/step6.cpp
    websocketpp/websocketpp/base64/base64.hpp
    websocketpp/websocketpp/common/chrono.hpp
    websocketpp/websocketpp/common/connection_hdl.hpp
    websocketpp/websocketpp/common/cpp11.hpp
    websocketpp/websocketpp/common/functional.hpp
    websocketpp/websocketpp/common/md5.hpp
    websocketpp/websocketpp/common/memory.hpp
    websocketpp/websocketpp/common/network.hpp
    websocketpp/websocketpp/common/platforms.hpp
    websocketpp/websocketpp/common/random.hpp
    websocketpp/websocketpp/common/regex.hpp
    websocketpp/websocketpp/common/stdint.hpp
    websocketpp/websocketpp/common/system_error.hpp
    websocketpp/websocketpp/common/thread.hpp
    websocketpp/websocketpp/common/time.hpp
    websocketpp/websocketpp/concurrency/basic.hpp
    websocketpp/websocketpp/concurrency/none.hpp
    websocketpp/websocketpp/config/asio.hpp
    websocketpp/websocketpp/config/asio_client.hpp
    websocketpp/websocketpp/config/asio_no_tls.hpp
    websocketpp/websocketpp/config/asio_no_tls_client.hpp
    websocketpp/websocketpp/config/boost_config.hpp
    websocketpp/websocketpp/config/core.hpp
    websocketpp/websocketpp/config/core_client.hpp
    websocketpp/websocketpp/config/debug.hpp
    websocketpp/websocketpp/config/debug_asio.hpp
    websocketpp/websocketpp/config/debug_asio_no_tls.hpp
    websocketpp/websocketpp/config/minimal_client.hpp
    websocketpp/websocketpp/config/minimal_server.hpp
    websocketpp/websocketpp/extensions/permessage_deflate/disabled.hpp
    websocketpp/websocketpp/extensions/permessage_deflate/enabled.hpp
    websocketpp/websocketpp/extensions/extension.hpp
    websocketpp/websocketpp/http/impl/parser.hpp
    websocketpp/websocketpp/http/impl/request.hpp
    websocketpp/websocketpp/http/impl/response.hpp
    websocketpp/websocketpp/http/constants.hpp
    websocketpp/websocketpp/http/parser.hpp
    websocketpp/websocketpp/http/request.hpp
    websocketpp/websocketpp/http/response.hpp
    websocketpp/websocketpp/impl/connection_impl.hpp
    websocketpp/websocketpp/impl/endpoint_impl.hpp
    websocketpp/websocketpp/impl/utilities_impl.hpp
    websocketpp/websocketpp/logger/basic.hpp
    websocketpp/websocketpp/logger/levels.hpp
    websocketpp/websocketpp/logger/stub.hpp
    websocketpp/websocketpp/logger/syslog.hpp
    websocketpp/websocketpp/message_buffer/alloc.hpp
    websocketpp/websocketpp/message_buffer/message.hpp
    websocketpp/websocketpp/message_buffer/pool.hpp
    websocketpp/websocketpp/processors/base.hpp
    websocketpp/websocketpp/processors/hybi00.hpp
    websocketpp/websocketpp/processors/hybi07.hpp
    websocketpp/websocketpp/processors/hybi08.hpp
    websocketpp/websocketpp/processors/hybi13.hpp
    websocketpp/websocketpp/processors/processor.hpp
    websocketpp/websocketpp/random/none.hpp
    websocketpp/websocketpp/random/random_device.hpp
    websocketpp/websocketpp/roles/client_endpoint.hpp
    websocketpp/websocketpp/roles/server_endpoint.hpp
    websocketpp/websocketpp/sha1/sha1.hpp
    websocketpp/websocketpp/transport/asio/security/base.hpp
    websocketpp/websocketpp/transport/asio/security/none.hpp
    websocketpp/websocketpp/transport/asio/security/tls.hpp
    websocketpp/websocketpp/transport/asio/base.hpp
    websocketpp/websocketpp/transport/asio/connection.hpp
    websocketpp/websocketpp/transport/asio/endpoint.hpp
    websocketpp/websocketpp/transport/base/connection.hpp
    websocketpp/websocketpp/transport/base/endpoint.hpp
    websocketpp/websocketpp/transport/debug/base.hpp
    websocketpp/websocketpp/transport/debug/connection.hpp
    websocketpp/websocketpp/transport/debug/endpoint.hpp
    websocketpp/websocketpp/transport/iostream/base.hpp
    websocketpp/websocketpp/transport/iostream/connection.hpp
    websocketpp/websocketpp/transport/iostream/endpoint.hpp
    websocketpp/websocketpp/transport/stub/base.hpp
    websocketpp/websocketpp/transport/stub/connection.hpp
    websocketpp/websocketpp/transport/stub/endpoint.hpp
    websocketpp/websocketpp/client.hpp
    websocketpp/websocketpp/close.hpp
    websocketpp/websocketpp/connection.hpp
    websocketpp/websocketpp/connection_base.hpp
    websocketpp/websocketpp/endpoint.hpp
    websocketpp/websocketpp/endpoint_base.hpp
    websocketpp/websocketpp/error.hpp
    websocketpp/websocketpp/frame.hpp
    websocketpp/websocketpp/server.hpp
    websocketpp/websocketpp/uri.hpp
    websocketpp/websocketpp/utf8_validator.hpp
    websocketpp/websocketpp/utilities.hpp
    websocketpp/websocketpp/version.hpp
    common.hpp)

add_executable(NFD_master ${SOURCE_FILES})